# fastapi

./: LICENSE  conftest.py  constants.py  main.py  pyproject.toml  schemas.py  storage.py
api/: api_bags.py  api_recipes.py
templates/: about_us.html  base.html  details.html  http404.html  index.html  new_recipe.html
tests/: test_root.py
web/: web_recipes.py
